[package]
name = "windows_transparent_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_System_LibraryLoader",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
] }
vecmath = "1.0"
parking_lot = "0.12"
anyhow = "1.0"
open = "5"